--- a/kivy/designEventApp.kv
+++ b/kivy/designEventApp.kv
@@ -11,7 +11,7 @@
 	FloatLayout:
 		Button:
 			id: btn
-			text: "HamRuyesh.com" if btn_ma.state == "normal" else "@HamRuyesh"
+			text: "google.com" if btn_ma.state == "normal" else "google"
 			pos_hint: {"x":0.5, "y":0.5}
 
 		Button:
