--- a/kivy/designFloatLayout.kv
+++ b/kivy/designFloatLayout.kv
@@ -1,13 +1,14 @@
-<Button>:
+# class rull for any wgets
+<Button>: 
 	font_size: 20
 	size_hint: 0.6, 0.6
-	color: 0.3, 0.8, 0.1, 1
-	background_color: 0.9, 0.2, 0.3, 1
+	color: 0.9, 0.8, 0.5, 1
+	background_color: 0.2, 0.2, 0.3, 1
 
 <MyLayout>:
 	FloatLayout:
 		Button:
-			text: "HamRuyesh.com" if btn_ma.state == "normal" else "@HamRuyesh"
+			text: "google.com" if btn_ma.state == "normal" else "google"
 			pos_hint: {"x":0.5, "y":0.5}
 
 		Button:
