--- a/minipro/loginmd/login.kv
+++ b/minipro/loginmd/login.kv
@@ -18,7 +18,7 @@ Screen:
             height: self.texture_size[1]
             padding_y: 15
 
-        MDTextFieldRound:
+        MDTextField:
             id: user
             hint_text: "username"
             icon_right: "account"
@@ -27,7 +27,7 @@ Screen:
             font_size: 18
             pos_hint: {"center_x": 0.5}
 
-        MDTextFieldRound:
+        MDTextField:
             id: password
             hint_text: "password"
             icon_right: "eye-off"
