--- a/kivy/multiscreen_style.kv
+++ b/kivy/multiscreen_style.kv
@@ -2,13 +2,11 @@ Manager:
 	Main:
 	Second:
 
-
-
 <Main>:
 	name:"main"
 	BoxLayout:
 		Label:
-			text:"HamRuyesh.Com"
+			text:"google.com"
 		Button:
 			text:"Go to Second"
 			on_release: root.manager.current="second"
