--- a/minipro/loginmd/login.kv
+++ b/minipro/loginmd/login.kv
@@ -20,7 +20,7 @@ Screen:
 
         MDTextField:
             id: user
-            hint_text: "username"
+            hint_text: "نام کاربری"
             icon_right: "account"
             size_hint_x: None
             width: 200
@@ -29,7 +29,7 @@ Screen:
 
         MDTextField:
             id: password
-            hint_text: "password"
+            hint_text: "پسورد"
             icon_right: "eye-off"
             size_hint_x: None
             width: 200
@@ -38,13 +38,13 @@ Screen:
             password: True
 
         MDRoundFlatButton:
-            text: "LOG IN"
+            text: "ورود"
             font_size: 12
             pos_hint: {"center_x": 0.5}
             on_press: app.logger()
 
         MDRoundFlatButton:
-            text: "CLEAR"
+            text: "پاک کردن"
             font_size: 12
             pos_hint: {"center_x": 0.5} 
             on_press: app.clear()           
